--- a/app/components/agenda/agendaitem/agendaitem-press.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-press.hbs
@@ -11,7 +11,8 @@
           @skin="secondary"
           @icon="pencil"
           @iconAlignment="left"
-          {{on "click" this.toggleIsEditing}}>
+          {{on "click" this.toggleIsEditing}}
+        >
           {{t "edit"}}
         </AuButton>
       {{/if}}
