--- a/app/components/publications/publication/proofs/proof-received-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-received-panel.hbs
@@ -87,7 +87,7 @@
       @cancelDisabled={{this.isCancelDisabled}}
       @onCancel={{this.closeEditProofModal}}
     >
-      <Auk::Button
+      <AuButton
         data-test-proof-received-panel-edit-save
         @skin="primary"
         @disabled={{this.isSaveDisabled}}
@@ -95,7 +95,7 @@
         {{on "click" (perform this.save)}}
       >
         {{t "save"}}
-      </Auk::Button>
+      </AuButton>
     </Auk::Modal::Footer>
   </Auk::Modal>
 {{/if}}
