--- a/app/components/publications/publication/publication-activities/publication-registration-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-registration-modal.hbs
@@ -33,7 +33,7 @@
     @onCancel={{@onCancel}}
     @cancelDisabled={{this.save.isRunning}}
   >
-    <Auk::Button
+    <AuButton
       data-test-publication-registration-save
       @skin="primary"
       @disabled={{this.isSaveDisabled}}
@@ -41,6 +41,6 @@
       {{on "click" (perform this.save)}}
     >
       {{t "save"}}
-    </Auk::Button>
+    </AuButton>
   </Auk::Modal::Footer>
 </Auk::Modal>
