--- a/app/components/publications/publication/translations/translation-request-modal.hbs
+++ b/app/components/publications/publication/translations/translation-request-modal.hbs
@@ -114,7 +114,7 @@
     @onCancel={{perform this.cancel}}
     @cancelDisabled={{this.isCancelDisabled}}
   >
-    <Auk::Button
+    <AuButton
       data-test-publication-translation-request-save
       @skin="primary"
       @disabled={{this.isSaveDisabled}}
@@ -122,6 +122,6 @@
       {{on "click" (perform this.save)}}
     >
       {{t "request-it"}}
-    </Auk::Button>
+    </AuButton>
   </Auk::Modal::Footer>
 </Auk::Modal>
