--- a/app/components/publications/overview/publications-table-row.hbs
+++ b/app/components/publications/overview/publications-table-row.hbs
@@ -262,15 +262,15 @@ request the whole row and not only the arrow at the end to be clickable }}
     </td>
   {{/if}}
   <td>
-    <AuButton
+    <AuLink
       data-test-publication-table-row-go-to-publication
-      @skin="naked"
+      @skin="button-naked"
       @icon="chevron-right"
       @hideText={{true}}
       @route="publications.publication"
       @model={{@publicationFlow.id}}
     >
       {{t "open-publication"}}
-    </AuButton>
+    </AuLink>
   </td>
 </tr>
