--- a/app/components/publications/publication/case/mandatees/mandatees-panel.hbs
+++ b/app/components/publications/publication/case/mandatees/mandatees-panel.hbs
@@ -9,14 +9,14 @@
         </Auk::Toolbar::Group>
         <Auk::Toolbar::Group @position="right">
           <Auk::Toolbar::Item>
-            <Auk::Button
+            <AuButton
               data-test-mandatees-panel-add
-              @skin="tertiary"
+              @skin="naked"
               @icon="plus"
               {{on "click" this.openSelectMandateeModal}}
             >
               {{t "add-minister"}}
-            </Auk::Button>
+            </AuButton>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
@@ -42,13 +42,15 @@
                   </Auk::Avatar>
                 </td>
                 <td class="auk-u-text-align--right">
-                  <Auk::Button
+                  <AuButton
                     data-test-mandatees-panel-row-unlink
-                    @layout="icon-only"
+                    @skin="naked"
+                    @alert={{true}}
                     @icon="trash"
-                    @skin="danger-borderless"
                     {{on "click" (fn this.removeMandatee mandatee)}}
-                  />
+                  >
+                    {{t "delete"}}
+                  </AuButton>
                 </td>
               </tr>
             {{/each}}
