--- a/app/components/publications/publication/case/remark/remark-panel.hbs
+++ b/app/components/publications/publication/case/remark/remark-panel.hbs
@@ -12,13 +12,14 @@
         {{#unless this.isEditing}}
           <Auk::Toolbar::Group @position="right">
             <Auk::Toolbar::Item>
-              <Auk::Button
+              <AuButton
                 data-test-remark-panel-edit
-                @skin="tertiary"
+                @skin="naked"
                 @icon="pencil"
-                @layout="icon-only"
                 {{on "click" this.openEditingPanel}}
-              />
+              >
+                {{t "edit"}}
+              </AuButton>
             </Auk::Toolbar::Item>
           </Auk::Toolbar::Group>
         {{/unless}}
@@ -62,26 +63,26 @@
         <Auk::Toolbar>
           <Auk::Toolbar::Group @position="left">
             <Auk::Toolbar::Item>
-              <Auk::Button
+              <AuButton
                 data-test-remark-panel-edit-cancel
-                @skin="borderless"
+                @skin="naked"
                 @disabled={{this.save.isRunning}}
                 {{on "click" this.closeEditingPanel}}
               >
                 {{t "cancel"}}
-              </Auk::Button>
+              </AuButton>
             </Auk::Toolbar::Item>
           </Auk::Toolbar::Group>
           <Auk::Toolbar::Group @position="right">
             <Auk::Toolbar::Item>
-              <Auk::Button
+              <AuButton
                 data-test-remark-panel-save
                 @skin="primary"
                 @loading={{this.save.isRunning}}
                 {{on "click" (perform this.save)}}
               >
                 {{t "save"}}
-              </Auk::Button>
+              </AuButton>
             </Auk::Toolbar::Item>
           </Auk::Toolbar::Group>
         </Auk::Toolbar>
