--- a/app/components/settings/user/next-button.hbs
+++ b/app/components/settings/user/next-button.hbs
@@ -1,8 +1,10 @@
-<Auk::Button
-  @skin="borderless"
-  @layout="icon-only"
+<AuLink
+  data-test-next-button-user-detail
+  @skin="button-naked"
   @icon="chevron-right"
+  @hideText={{true}}
   @route="settings.users.user"
   @model={{await @row.account.user.id}}
-  data-test-next-button-user-detail
-/>
+>
+  {{t "next"}}
+</AuLink>
