--- a/app/components/subcases/subcase-item.hbs
+++ b/app/components/subcases/subcase-item.hbs
@@ -83,7 +83,8 @@
             @pieces={{this.limitedSubcaseDocuments}}
           />
           {{#if this.enableShowMore}}
-            <Auk::ButtonLink
+            <AuButton
+              @skin="link"
               @icon={{if this.isShowingAllDocuments "dash" "plus"}}
               {{on "click" this.toggleShowingAllDocuments}}
               class="auk-u-mt-2"
@@ -93,7 +94,7 @@
               {{else}}
                 {{t "show-more"}}
               {{/if}}
-            </Auk::ButtonLink>
+            </AuButton>
           {{/if}}
         {{/if}}
       </Auk::Accordion::Item>
