--- a/app/templates/settings/overview.hbs
+++ b/app/templates/settings/overview.hbs
@@ -9,16 +9,18 @@
       {{t "manage-emails"}}
     </Auk::Button>
   </div>
-  <div class="auk-u-m-2">
-    <Auk::Button
-      @skin="tertiary"
-      @icon="pencil"
-      @route="settings.system-alerts"
-      data-test-route-settings-overview-manage-alerts
-    >
-      {{t "manage-alerts"}}
-    </Auk::Button>
-  </div>
+  {{#if (user-may "manage-alerts")}}
+    <div class="auk-u-m-2">
+      <Auk::Button
+        @skin="tertiary"
+        @icon="pencil"
+        @route="settings.system-alerts"
+        data-test-route-settings-overview-manage-alerts
+      >
+        {{t "manage-alerts"}}
+      </Auk::Button>
+    </div>
+  {{/if}}
   <div class="auk-u-m-2">
     <Auk::Button
       @skin="tertiary"
