--- a/app/templates/agenda/agendaitems/agendaitem/decisions.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/decisions.hbs
@@ -9,6 +9,7 @@
 </Auk::Toolbar>
 <div class="auk-u-mb-2">
   <Agenda::Agendaitem::AgendaitemDecision
+    @agendaitem={{this.agendaitem}}
     @decisionActivity={{this.model}}
   />
 </div>
