--- a/app/templates/print-overviews/decisions/agendaitems.hbs
+++ b/app/templates/print-overviews/decisions/agendaitems.hbs
@@ -16,6 +16,7 @@
       {{#if (and subcase decisionActivity)}}
         <div class="auk-u-m-8">
           <Agenda::Agendaitem::AgendaitemDecision
+            @agendaitem={{agendaitemRow}}
             @decisionActivity={{decisionActivity}}
           />
         </div>
