--- a/app/templates/cases/case/subcases/subcase/overview.hbs
+++ b/app/templates/cases/case/subcases/subcase/overview.hbs
@@ -37,7 +37,7 @@
         @onSave={{this.saveMandateeData}}
       />
       <Utils::GovernmentAreas::GovernmentAreasPanel
-        @datetimeForGovernmentAreas={{or this.agenda.created this.meeting.plannedStart @model.subcase.created}}
+        @datetimeForGovernmentAreas={{or this.meeting.plannedStart this.agenda.created @model.subcase.created}}
         @governmentAreas={{@model.subcase.governmentAreas}}
         @allowEditing={{user-may "manage-cases"}}
         @onSave={{this.saveGovernmentAreas}}
