--- a/app/templates/publications/publication/case.hbs
+++ b/app/templates/publications/publication/case.hbs
@@ -16,7 +16,7 @@
     />
 
     <Utils::GovernmentAreas::GovernmentAreasPanel
-      @datetimeForGovernmentAreas={{or this.agenda.created this.meeting.plannedStart this.model.created}}
+      @datetimeForGovernmentAreas={{or this.meeting.plannedStart this.agenda.created this.model.created}}
       @governmentAreas={{this.governmentAreas}}
       @allowEditing={{true}}
       @onSave={{this.saveGovernmentAreas}}
