chore: use referenceDate instead of datetimeForGovernmentAreas

--- a/app/components/utils/government-areas/government-areas-panel.hbs
+++ b/app/components/utils/government-areas/government-areas-panel.hbs
@@ -63,7 +63,7 @@
   <Utils::GovernmentAreas::EditGovernmentAreasModal
     @governmentFields={{this.governmentFields}}
     @governmentDomains={{this.governmentDomains}}
-    @datetimeForGovernmentAreas={{@datetimeForGovernmentAreas}}
+    @referenceDate={{@referenceDate}}
     @onSave={{this.save}}
     @onCancel={{this.closeEditModal}}
   />
