--- a/app/templates/newsletter.hbs
+++ b/app/templates/newsletter.hbs
@@ -1,4 +1,5 @@
 <Newsletter::NewsletterHeaderOverview
-  @meeting={{this.model.meeting}}
+  @meeting={{@model.meeting}}
+  @agenda={{@model.agenda}}
 />
 {{outlet}}
